dataset1235/2025-2/1379599236/users/3204213742/executions/2277843042_3902794658.log
== SUBMISSION (2025-08-13 19:53:01)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("Nome:",nome)
print("Idade:",idade)
print("Altura:",altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 19:44:23)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("nome: "nome)
print("idade: "idade)
print("altura: "altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 5
    print("nome: "nome)
          ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 5
    print("nome: "nome)
          ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 5
    print("nome: "nome)
          ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 5
    print("nome: "nome)
          ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 19:45:51)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print(nome)
print(idade)
print(round(altura,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 19:45:13)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 19:39:29)
-- CODE: 
nome = input("nome:")
idade = int(input("idade:"))
altura = float(input("altura:"))

print("nome:"nome)
print("idade:"idade)
print("altura:"altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 5
    print("nome:"nome)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 5
    print("nome:"nome)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 5
    print("nome:"nome)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 5
    print("nome:"nome)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 19:38:19)
-- CODE: 
nome = input("nome:")
idade = int(input("idade:"))
altura = float(input("altura:"))

print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 19:45:58)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print(nome)
print(idade)
print(round(altura,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 19:44:35)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("nome: " nome)
print("idade: " idade)
print("altura: " altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 5
    print("nome: " nome)
          ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 5
    print("nome: " nome)
          ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 5
    print("nome: " nome)
          ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 5
    print("nome: " nome)
          ^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 19:49:09)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("nome:",nome)
print("idade:",idade)
print("altura:",altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura: 1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 19:48:29)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("nome:",nome)
print("idade:",idade)
print("altura:",round(altura, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura: 1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 19:48:42)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("nome:",nome)
print("idade:",idade)
print("altura:",round(altura, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura: 1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 19:40:46)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 19:37:51)
-- CODE: 
nome = input("nome:")
idade = int(input("idade:"))
altura = float(input("altura:"))

print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 19:47:33)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print(nome)
print(idade)
print(round(altura, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 19:41:40)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 19:52:15)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("nome:",nome)
print("idade:",idade)
print("altura:",altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura: 1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 19:46:51)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print(nome)
print(idade)
print(round(altura, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 19:40:24)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("nome:"nome)
print("idade:"idade)
print("altura:"altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 5
    print("nome:"nome)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 5
    print("nome:"nome)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 5
    print("nome:"nome)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 5
    print("nome:"nome)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 19:44:58)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 19:52:35)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("nome:",nome)
print("idade:",idade)
print("altura:",altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura: 1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 19:44:14)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("nome:"nome)
print("idade:"idade)
print("altura:"altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 5
    print("nome:"nome)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 5
    print("nome:"nome)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 5
    print("nome:"nome)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 5
    print("nome:"nome)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 19:49:10)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("nome:",nome)
print("idade:",idade)
print("altura:",altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura: 1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 19:48:24)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("nome:",nome)
print("idade:",idade)
print("altura:",round(altura, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura: 1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-17 20:48:06)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("Nome:",nome)
print("Idade:",idade)
print("Altura:",altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 17:22:07)
-- CODE: 
nome = input("nome:")
idade = input("idade:")
altura = float(input("altura:"))

print("Nome:",nome)
print("Idade:",idade)
print("Altura:",altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
